update docs for enumerations endpoint #3
