# src/app/controllers/extended_api/v1/extended_enumerations_controller.rb
@@ -9,10 +9,10 @@ module ExtendedApi
         @enumeration = Enumeration.get_subclass(params[:type])
         if @enumeration
           render json: @enumeration.shared.sorted
-        elsif params[:type].nil? || params[:type].empty?
-          render json: Enumeration.shared.sorted
+        elsif !params[:type]
+          render_404 message: "could not find any enumeration with type '#{params[:type]}'"
         else
-          render_404 message: "could not find any enumeration of type '#{params[:type]}'"
+          render json: Enumeration.shared.sorted
         end
       end
 
